<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#9ef9f1"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="59dp"

                app:cardCornerRadius="8sp"
                app:cardElevation="8sp">

                <RelativeLayout
                    android:layout_width="374dp"
                    android:layout_height="match_parent"
                    android:paddingBottom="6sp"
                    android:paddingLeft="6sp"
                    android:paddingRight="6sp"
                    android:paddingTop="8sp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/imageView3"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/name"
                        android:textAlignment="viewStart"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="110dp"
                        tools:layout_editor_absoluteY="315dp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/s2" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="34dp"
                        android:layout_marginTop="84dp"
                        app:srcCompat="@drawable/ic_school_black_24dp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="34dp"
                        android:layout_marginTop="104dp"
                        app:srcCompat="@drawable/ic_location_city_black_24dp" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="34dp"
                        android:layout_marginTop="124dp"
                        app:srcCompat="@drawable/ic_date_range_black_24dp" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="34dp"
                        android:layout_marginTop="144dp"
                        app:srcCompat="@drawable/ic_attach_money_black_24dp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="54dp"
                        android:layout_marginTop="84dp"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="54dp"
                        android:layout_marginTop="104dp"
                        android:text="@string/organisation" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="54dp"
                        android:layout_marginTop="124dp"
                        android:text="@string/doe" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="54dp"
                        android:layout_marginTop="144dp"
                        android:text="@string/funding" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/textView4"
                        android:fontFamily="serif"
                        android:text="@string/date"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        tools:layout_editor_absoluteX="237dp"
                        tools:layout_editor_absoluteY="315dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@id/cardView"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:fitsSystemWindows="true"
                android:text="@string/details"
                android:textStyle="bold"
                tools:ignore="NotSibling" />




            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
               android:background="#3c3f41"
                app:layout_constraintBottom_toBottomOf="parent"
                app:menu="@menu/navigation" />

            <Button
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="151dp"
                android:layout_marginBottom="0dp"
                android:text="Apply"
                android:background="#014513"
                android:textColor="#ffffff"/>


        </RelativeLayout>



    </ScrollView>

</RelativeLayout>

